gitmodules: Added neofetch + autojump subprojects

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,10 @@
 	url = git@github.com:alfro-c12n/spacemacs.git
 [submodule "emacs-anywhere"]
 	path = emacs-anywhere
-	url = https://github.com/alfro-c12n/emacs-anywhere.git
+	url = git@github.com:alfro-c12n/emacs-anywhere.git
+[submodule "neofetch"]
+	path = neofetch
+	url = git@github.com:dylanaraps/neofetch.git
+[submodule "autojump"]
+	path = autojump
+	url = git://github.com/joelthelion/autojump.git
