i3wm: Added i3lock  workspace moving

--- a/i3/config
+++ b/i3/config
@@ -154,3 +154,7 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
 }
+
+bindsym $mod+Shift+X exec i3lock
+bindsym $mod+Control+Left move workspace to output left
+bindsym $mod+Control+Right move workspace to output right
