--- a/i3/config
+++ b/i3/config
@@ -10,7 +10,8 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
-
+set $outputLeft VGA-1
+set $outputRight HDMI-2
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 8
@@ -92,6 +93,18 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+# assign workspaces to screens
+workspace 1 output $outputLeft
+workspace 3 output $outputLeft
+workspace 5 output $outputLeft
+workspace 7 output $outputLeft
+workspace 9 output $outputLeft
+workspace 2 output $outputRight
+workspace 4 output $outputRight
+workspace 6 output $outputRight
+workspace 8 output $outputRight
+workspace 10 output $outputRight
+
 # switch to workspace
 bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
@@ -155,6 +168,22 @@ bar {
         status_command i3status
 }
 
-bindsym $mod+Shift+X exec i3lock
+bindsym Ctrl+Mod1+L exec i3lock -i ~/Pictures/Wallpapers/portal.png
+
 bindsym $mod+Control+Left move workspace to output left
 bindsym $mod+Control+Right move workspace to output right
+bindsym Ctrl+Mod1+Right focus output left
+bindsym Ctrl+Mod1+Left focus output right
+bindsym Ctrl+Mod1+Down workspace next_on_output
+bindsym Ctrl+Mod1+Up workspace prev_on_output
+
+# Pulse Audio controls + plus/minus audio controls
+bindsym $mod+plus exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
+bindsym $mod+minus exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+
+#Wallpaper
+exec_always feh --bg-scale --no-xinerama ~/Pictures/Wallpapers/portal.jpg
+
