--- a/i3/config
+++ b/i3/config
@@ -10,8 +10,11 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
-set $outputLeft VGA-1
-set $outputRight HDMI-2
+
+# Get with xrandr --current
+# Set with axrandr
+set $outputLeft HDMI-1
+set $outputRight HDMI-0
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 8
