--- a/i3/config
+++ b/i3/config
@@ -5,6 +5,10 @@
 # this file and re-run i3-config-wizard(1).
 #
 
+# DEBUG MODE:
+# https://i3wm.org/docs/debugging.html
+# i3-msg 'debuglog on; shmlog on; reload'
+
 # i3 config file (v4)
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
@@ -170,7 +174,9 @@ bar {
 }
 
 set $background ~/Media/Pictures/Wallpapers/portal.png
-bindsym Ctrl+Mod1+L exec i3lock -i $background
+
+bindsym Ctrl+Mod1+L exec "~/.c12n/i3/custom-lock-script"
+exec xautolock -time 5 -locker "~/.c12n/i3/custom-lock-script"
 
 bindsym $mod+Control+Left move workspace to output left
 bindsym $mod+Control+Right move workspace to output right
@@ -186,8 +192,13 @@ bindsym $mod+minus exec --no-startup-id amixer -D pulse sset Master 5%- #decreas
 bindsym XF86AudioLowerVolume exec --no-startup-id amixer -D pulse sset Master 5%- # mute sound
 bindsym XF86AudioMute exec --no-startup-id amixer -D pulse sset Master toggle # mute sound
 
-#Wallpaper
-exec_always feh --bg-scale --no-xinerama $background
+# Bar bar
+exec --no-startup-id pnmixer
+exec --no-startup-id nm-applet
+exec --no-startup-id blueman-applet
 
 # Lower bar
 exec --no-startup-id gnome-settings-daemon
+
+#Wallpaper
+exec_always feh --bg-scale --no-xinerama $background
