--- a/i3/config
+++ b/i3/config
@@ -170,7 +170,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+    status_command i3status --config ~/.config/i3/i3status.conf
 }
 # Lower bar
 exec --no-startup-id nm-applet
@@ -199,7 +199,7 @@ bindsym XF86AudioLowerVolume exec --no-startup-id amixer -D pulse sset Master 5%
 bindsym XF86AudioMute exec --no-startup-id amixer -D pulse sset Master toggle # mute sound
 
 # Bar bar
-exec --no-startup-id pnmixer
+#exec --no-startup-id pnmixer
 exec --no-startup-id nm-applet
 exec --no-startup-id blueman-applet
 
