--- a/i3/config
+++ b/i3/config
@@ -93,7 +93,7 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+bindsym $mod+c focus child
 
 # Windows that should be floating:
 for_window [class="Gnome-calculator" instance="gnome-calculator"] floating enable
@@ -169,8 +169,11 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
+# bar {
+#     status_command i3status --config ~/.config/i3/i3status.conf
+# }
 bar {
-    status_command i3status --config ~/.config/i3/i3status.conf
+    status_command ~/.c12n/i3/i3status.sh
 }
 # Lower bar
 exec --no-startup-id nm-applet
@@ -196,7 +199,12 @@ bindsym $mod+minus exec --no-startup-id amixer -D pulse sset Master 5%- #decreas
 bindsym button7 exec --no-startup-id amixer -D pulse sset Master 5%- #decrease sound volume
 bindsym $mod+button5 exec --no-startup-id amixer -D pulse sset Master 5%- #decrease sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id amixer -D pulse sset Master 5%- # mute sound
-bindsym XF86AudioMute exec --no-startup-id amixer -D pulse sset Master toggle # mute sound
+bindsym XF86AudioMute exec --no-startup-id amixer -D pulse sset Master toggle # mute soun
+
+
+bindsym Ctrl+Print exec --no-startup-id maim | xclip -selection clipboard -t image/png
+bindsym Print exec --no-startup-id maim --window $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
+bindsym $mod+Shift+S exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
 
 # Bar bar
 #exec --no-startup-id pnmixer
@@ -208,3 +216,18 @@ exec --no-startup-id gnome-settings-daemon
 
 #Wallpaper
 exec_always feh --bg-scale --no-xinerama $background
+
+# Startup: Default
+exec --no-startup-id i3-msg 'workspace 1; exec firefox -P alfro'
+exec --no-startup-id i3-msg 'workspace 2; exec gnome-terminal'
+
+# Startup: TTK Work
+exec --no-startup-id i3-msg workspace 1; exec --no-startup-id firefox -P TELTEK
+
+# Change to rusky
+#bindsym Mod1+space exec setxkbmap ru
+#bindsym Mod1+space exec setxkbmap es
+
+exec setxkbmap -layout es,ru -option grp:alt_space_toggle
+#bindsym $mod+Space setxkbmap es
+#bindsym $mod+Space setxkbmap ru
